--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # misc
 .DS_Store
+Thumbs.db
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +23,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
